changes with all new specs

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,20 @@ ACCRUAL_AMOUNT_TOLERANCE=5
 SUPER_ADMIN_EMAIL=kunalbajaj19@outlook.com
 SUPER_ADMIN_PASSWORD=EverGreen@11
 SUPER_ADMIN_NAME=Platform Admin
+# Storage Configuration (AWS S3 or Cloudflare R2)
+# Set STORAGE_TYPE to 's3' for AWS S3 or 'r2' for Cloudflare R2
+STORAGE_TYPE=r2
+
+# Cloudflare R2 Configuration
+R2_ACCOUNT_ID=your-r2-account-id
+R2_ACCESS_KEY_ID=your-r2-access-key-id
+R2_SECRET_ACCESS_KEY=your-r2-secret-access-key
+R2_BUCKET_NAME=your-r2-bucket-name
+# Optional: Custom public URL for R2 (if using custom domain)
+# R2_PUBLIC_URL=https://your-custom-domain.com
+
+# AWS S3 Configuration (if using S3 instead of R2)
+# AWS_S3_REGION=ap-south-1
+# AWS_ACCESS_KEY_ID=your-aws-access-key-id
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+# AWS_S3_BUCKET=your-s3-bucket-name
