--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.5",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
