--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "^10.0.0",
-    "@types/nodemailer": "^7.0.3",
     "@types/pdfkit": "^0.17.3",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
@@ -44,13 +43,13 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
-    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-parse": "^2.4.5",
     "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
+    "resend": "^4.0.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.34.5",
     "typeorm": "^0.3.20",
