--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-parse": "^2.4.5",
+    "pdf2pic": "^3.2.0",
     "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
