--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
     "sharp": "^0.34.5",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@nestjs/bullmq": "^10.0.0",
+    "bullmq": "^5.0.0",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
