super admin email

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ ACCRUAL_AMOUNT_TOLERANCE=5
 SUPER_ADMIN_EMAIL=kunalbajaj19@outlook.com
 SUPER_ADMIN_PASSWORD=EverGreen@11
 SUPER_ADMIN_NAME=Platform Admin
+
+# Email to receive new registration notifications (defaults to kunalbajaj19@outlook.com if not set)
+SUPER_ADMIN_NOTIFICATION_EMAIL=kunalbajaj19@outlook.com
 # Storage Configuration (AWS S3 or Cloudflare R2)
 # Set STORAGE_TYPE to 's3' for AWS S3 or 'r2' for Cloudflare R2
 STORAGE_TYPE=r2
