--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=3000
 CORS_ORIGIN=http://localhost:4200
+# Frontend URL for invoice public links, QR codes, and email links
+FRONTEND_URL=http://localhost:4200
 
 DB_HOST=localhost
 DB_PORT=5432
